# srpl-reproduction

./: LICENSE  PLAN.md  README.md  pyproject.toml
experiments/full/PPOLag-{SafetyPointButton1Base-v0}/seed-000-2026-06-04-19-24-28/: config.json  progress.csv
experiments/seed-000-2026-06-05-22-57-14/: progress.csv
experiments/seed-000-2026-06-05-22-57-14/torch_save/: epoch-1.pt
experiments/transfer/: s2c_button1.pt
figures/: results.csv  table1.md
island_navigation/: dqn.py  env.py
par4/TD3Lag-{SafetyPointGoal1SRPL-v0}/seed-000-2026-06-04-14-28-03/: progress.csv
par4/TD3Lag-{SafetyPointGoal1SRPL-v0}/seed-002-2026-06-04-14-28-03/: config.json
par4/TD3Lag-{SafetyPointGoal1SRPL-v0}/seed-003-2026-06-04-14-28-03/: config.json  progress.csv
par_test/TD3Lag-{SafetyPointGoal1Base-v0}/seed-000-2026-06-04-13-56-00/: config.json
scripts/: aggregate_results.py  check_obs_dims.py  env_check.py  plot_transfer.py  run_all.sh  run_transfer.sh  train.py  train_source_s2c.py
smoke/TD3Lag-{SafetyPointGoal1SRPL-v0}/seed-000-2026-06-04-12-11-24/: config.json  progress.csv
smoke_speed/TD3Lag-{SafetyPointGoal1SRPL-v0}/seed-000-2026-06-04-13-20-29/: config.json  progress.csv
smoke_speed2/TD3Lag-{SafetyPointGoal1SRPL-v0}/seed-000-2026-06-04-13-40-28/: config.json
srpl/: __init__.py  labeling.py  s2c_model.py
srpl/envs/: safety_gym_srpl.py
srpl_reproduction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_labeling.py
tests/: test_s2c_model.py
transfer_smoke/PPOLag-{SafetyPointGoal1SRPL-v0}/seed-000-2026-06-05-22-57-14/: config.json
(+252 files in other folders)
